Code cleanup: formatting, Lombok annotations, remove extra type defs in generics